--- a/app/src/main/res/layout/activity_add_profile.xml
+++ b/app/src/main/res/layout/activity_add_profile.xml
@@ -7,7 +7,7 @@
               android:paddingTop="@dimen/activity_vertical_margin">
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin">
@@ -21,6 +21,7 @@
             />
 
         <EditText
+            android:inputType="text"
             android:id="@+id/add_profile_name"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
@@ -38,6 +39,7 @@
             />
 
         <EditText
+            android:inputType="text"
             android:id="@+id/add_profile_private_key"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -62,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:text="default password type"
+            android:text="@string/password_type"
             android:textAllCaps="true"
             android:textColor="@color/text_grey" />
 
@@ -70,7 +72,7 @@
             android:id="@+id/add_profile_password_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:spinnerMode="dialog"/>
+            android:spinnerMode="dropdown"/>
 
     </LinearLayout>
 
