--- a/app/src/main/res/layout/dialog_tag_settings.xml
+++ b/app/src/main/res/layout/dialog_tag_settings.xml
@@ -3,82 +3,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="fill_parent"
-              android:paddingTop="@dimen/activity_vertical_margin">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
+              android:layout_height="match_parent"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin">
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:layout_marginTop="25dp"
+        android:text="@string/password_length"
+        android:textAllCaps="true"
+        android:textColor="@color/text_grey"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:text="@string/password_length"
-            android:textAllCaps="true"
-            android:textColor="@color/text_grey" />
+    <Spinner
+        android:id="@+id/tag_settings_password_length"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
-        <Spinner
-            android:id="@+id/tag_settings_password_length"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:text="@string/password_type"
+        android:textAllCaps="true"
+        android:textColor="@color/text_grey"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:text="@string/password_type"
-            android:textAllCaps="true"
-            android:textColor="@color/text_grey" />
-
-        <Spinner
-            android:id="@+id/tag_settings_password_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:spinnerMode="dropdown" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:gravity="bottom"
-        android:layout_marginTop="20dp"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:showDividers="middle"
-        android:divider="?android:dividerHorizontal">
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            />
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:divider="?android:dividerHorizontal"
-            style="?android:buttonBarStyle">
-
-            <Button
-                android:id="@+id/tag_settings_discard"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="?android:buttonBarButtonStyle"
-                android:text="@string/discard" />
-
-            <Button
-                android:id="@+id/tag_settings_save"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                style="?android:buttonBarButtonStyle"
-                android:layout_weight="1"
-                android:text="@string/save" />
-
-        </LinearLayout>
-    </LinearLayout>
+    <Spinner
+        android:id="@+id/tag_settings_password_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:spinnerMode="dropdown"/>
 
 </LinearLayout>
