--- a/app/src/main/res/layout/activity_browser_integration.xml
+++ b/app/src/main/res/layout/activity_browser_integration.xml
@@ -64,8 +64,8 @@
             android:src="@drawable/ic_action_gear"
             android:contentDescription="@string/tag_settings"
             android:background="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="48dp"
+            android:layout_height="48dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -92,12 +92,13 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"/>
 
-        <ImageView
-            android:src="@drawable/ic_action_gear"
-            android:contentDescription=""
-            android:visibility="invisible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/browser_digest"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="10dp"
+            android:layout_width="38dp"
+            android:layout_height="48dp"/>
+
     </LinearLayout>
 
     <LinearLayout
