--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/main_tag"
             android:inputType="text"
             android:singleLine="true"
             android:maxLines="1"
             android:maxLength="25"
             android:layout_width="250dp"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:completionThreshold="2"/>
 
         <ImageButton
             android:id="@+id/main_tag_settings"
