Enable hash button only if tag, master key are set

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,6 +117,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:enabled="false"
             style="?android:buttonBarButtonStyle"/>
 
     </LinearLayout>
