--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,7 +121,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:enabled="false"
-            style="?android:buttonBarButtonStyle"/>
+            style="@style/hashButtonStyle"/>
 
     </LinearLayout>
 
