New dimension value for hashed password text size

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
         <TextView
             android:gravity="left"
             android:id="@+id/main_hashed_password"
-            android:textSize="20sp"
+            android:textSize="@dimen/hashed_password_text_size"
             android:layout_width="275dp"
             android:layout_height="wrap_content"/>
 
