--- a/app/src/main/res/layout/activity_add_profile.xml
+++ b/app/src/main/res/layout/activity_add_profile.xml
@@ -23,7 +23,7 @@
         <EditText
             android:inputType="text"
             android:id="@+id/add_profile_name"
-            android:layout_width="200dp"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:singleLine="true"
@@ -57,7 +57,7 @@
 
         <Spinner
             android:id="@+id/add_profile_password_length"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
         <TextView
@@ -70,7 +70,7 @@
 
         <Spinner
             android:id="@+id/add_profile_password_type"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:spinnerMode="dropdown"/>
 
