--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -22,7 +22,7 @@
         <EditText
             android:inputType="text"
             android:id="@+id/edit_profile_name"
-            android:layout_width="200dp"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:singleLine="true"
@@ -56,7 +56,7 @@
 
         <Spinner
             android:id="@+id/edit_profile_password_length"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
         <TextView
@@ -69,7 +69,7 @@
 
         <Spinner
             android:id="@+id/edit_profile_password_type"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:spinnerMode="dropdown" />
 
