--- a/app/src/main/res/layout/dialog_tag_settings.xml
+++ b/app/src/main/res/layout/dialog_tag_settings.xml
@@ -17,7 +17,7 @@
 
     <Spinner
         android:id="@+id/tag_settings_password_length"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>
 
     <TextView
@@ -30,7 +30,7 @@
 
     <Spinner
         android:id="@+id/tag_settings_password_type"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:spinnerMode="dropdown"/>
 
