--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="dialog_padding">16dp</dimen>
+    <dimen name="small_spacing">4dp</dimen>
+    <dimen name="section_margin_top">16dp</dimen>
     <dimen name="hashed_password_text_size">32sp</dimen>
 </resources>
