Implemented preference: copy to clipboard

--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -3,4 +3,7 @@
     <item name="settings_default_remember_master_key"
           format="integer" type="string">0
     </item>
+    <item name="settings_default_copy_to_clipboard" format="boolean"
+          type="bool">false
+    </item>
 </resources>
