--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -4,8 +4,12 @@
 
     <ListPreference
         android:key="@string/settings_key_remember_master_key"
-        android:title="@string/remember_master_key"
+        android:title="@string/settings_title_remember_master_key"
         android:entries="@array/RememberMasterKeyEntries"
         android:entryValues="@array/RememberMasterKeyEntryValues"
         android:defaultValue="@string/settings_default_remember_master_key"/>
+    <CheckBoxPreference
+        android:key="@string/settings_key_copy_to_clipboard"
+        android:title="@string/settings_title_copy_to_clipboard"
+        android:defaultValue="@bool/settings_default_copy_to_clipboard" />
 </PreferenceScreen>
