--- a/app/src/main/res/layout/activity_add_profile.xml
+++ b/app/src/main/res/layout/activity_add_profile.xml
@@ -3,36 +3,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="fill_parent"
-              android:paddingTop="@dimen/activity_vertical_margin">
+              android:layout_height="fill_parent">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:padding="@dimen/activity_vertical_margin">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/small_spacing"
             android:text="@string/name"
             android:textAllCaps="true"
-            android:textColor="@color/text_grey"
-            />
+            android:textColor="@color/text_grey"/>
 
         <EditText
             android:inputType="text"
             android:id="@+id/add_profile_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_spacing"
+            android:layout_marginBottom="@dimen/small_spacing"
             android:maxLines="1"
             android:singleLine="true"
-            android:maxLength="15" />
+            android:maxLength="15"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="@dimen/section_margin_top"
+            android:layout_marginBottom="@dimen/small_spacing"
             android:text="@string/private_key"
             android:textAllCaps="true"
             android:textColor="@color/text_grey"
@@ -43,35 +45,43 @@
             android:id="@+id/add_profile_private_key"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_spacing"
+            android:layout_marginBottom="@dimen/small_spacing"
             android:singleLine="true"
             android:maxLines="1"
-            android:maxLength="48" />
+            android:maxLength="48"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="@dimen/section_margin_top"
+            android:layout_marginBottom="@dimen/small_spacing"
             android:text="@string/password_length"
             android:textAllCaps="true"
-            android:textColor="@color/text_grey" />
+            android:textColor="@color/text_grey"/>
 
         <Spinner
             android:id="@+id/add_profile_password_length"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_spacing"
+            android:layout_marginBottom="@dimen/small_spacing"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="@dimen/section_margin_top"
+            android:layout_marginBottom="@dimen/small_spacing"
             android:text="@string/password_type"
             android:textAllCaps="true"
-            android:textColor="@color/text_grey" />
+            android:textColor="@color/text_grey"/>
 
         <Spinner
             android:id="@+id/add_profile_password_type"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_spacing"
+            android:layout_marginBottom="@dimen/small_spacing"
             android:spinnerMode="dropdown"/>
 
     </LinearLayout>
@@ -102,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 style="?android:buttonBarButtonStyle"
-                android:text="@string/discard" />
+                android:text="@string/discard"/>
 
             <Button
                 android:id="@+id/add_profile_add"
@@ -110,7 +120,7 @@
                 android:layout_height="wrap_content"
                 style="?android:buttonBarButtonStyle"
                 android:layout_weight="1"
-                android:text="@string/add" />
+                android:text="@string/add"/>
 
         </LinearLayout>
     </LinearLayout>
