--- a/app/src/main/res/layout/activity_browser_integration.xml
+++ b/app/src/main/res/layout/activity_browser_integration.xml
@@ -3,14 +3,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_marginTop="@dimen/activity_vertical_margin"
+              android:gravity="center"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin">
 
@@ -22,26 +23,19 @@
 
         <Spinner
             android:id="@+id/browser_profile"
-            android:layout_width="250dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_marginRight="48dip"
             android:spinnerMode="dropdown"/>
-
-        <ImageView
-            android:src="@drawable/ic_action_gear"
-            android:contentDescription=""
-            android:visibility="invisible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
     </LinearLayout>
 
     <LinearLayout
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="25dp"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <ImageView
@@ -50,32 +44,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/browser_tag"
             android:inputType="text"
             android:singleLine="true"
             android:maxLines="1"
             android:maxLength="25"
-            android:layout_width="250dp"
+            android:completionThreshold="2"
+            android:hint="@string/tag"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"/>
 
         <ImageButton
             android:id="@+id/browser_tag_settings"
             android:src="@drawable/ic_action_gear"
             android:contentDescription="@string/tag_settings"
-            android:background="@null"
             android:layout_width="48dp"
-            android:layout_height="48dp"/>
+            android:layout_height="48dp"
+            style="?android:borderlessButtonStyle"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_marginTop="25dp"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:gravity="center"
         android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:gravity="center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tag_layout">
 
         <ImageView
             android:src="@drawable/ic_action_key"
@@ -89,15 +86,19 @@
             android:singleLine="true"
             android:maxLines="1"
             android:maxLength="25"
-            android:layout_width="250dp"
+            android:fontFamily="sans-serif"
+            android:hint="@string/master_key"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/browser_digest"
-            android:gravity="left|center_vertical"
-            android:paddingLeft="10dp"
-            android:layout_width="38dp"
-            android:layout_height="48dp"/>
+            android:gravity="center"
+            android:paddingLeft="4dip"
+            android:paddingRight="4dip"
+            android:layout_width="48dip"
+            android:layout_height="48dip"
+            style="@android:style/TextAppearance.Medium"/>
 
     </LinearLayout>
 
@@ -105,6 +106,7 @@
         android:gravity="bottom"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:orientation="vertical"
         android:showDividers="middle"
         android:divider="?android:dividerHorizontal">
@@ -137,36 +139,6 @@
                 android:text="@string/hash"/>
 
         </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginTop="15dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:src="@drawable/ic_action_key"
-            android:contentDescription="@string/master_key"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <EditText
-            android:id="@+id/main_master_key"
-            android:inputType="textPassword"
-            android:singleLine="true"
-            android:maxLines="1"
-            android:maxLength="25"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"/>
-
-        <ImageView
-            android:src="@drawable/ic_action_gear"
-            android:contentDescription=""
-            android:visibility="invisible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
     </LinearLayout>
 
 </LinearLayout>
