--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,22 @@
                 android:layout_height="fill_parent"
                 tools:context=".MainActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/tag_layout"
-        android:layout_marginTop="100dp"
-        android:gravity="center"
-        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/activity_top_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/ic_tag"
             android:src="@drawable/ic_action_tag"
             android:contentDescription="@string/tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"/>
 
         <AutoCompleteTextView
             android:id="@+id/main_tag"
@@ -24,7 +27,9 @@
             android:singleLine="true"
             android:maxLines="1"
             android:maxLength="25"
-            android:layout_width="250dp"
+            android:layout_toLeftOf="@+id/main_tag_settings"
+            android:layout_toRightOf="@+id/ic_tag"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:completionThreshold="2"
             android:hint="@string/tag"/>
@@ -33,25 +38,30 @@
             android:id="@+id/main_tag_settings"
             android:src="@drawable/ic_action_gear"
             android:contentDescription="@string/tag_settings"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
             style="?android:borderlessButtonStyle"/>
-    </LinearLayout>
+    </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/master_key_layout"
-        android:layout_marginTop="25dp"
-        android:gravity="center"
-        android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_below="@+id/tag_layout">
 
         <ImageView
+            android:id="@+id/ic_key"
             android:src="@drawable/ic_action_key"
             android:contentDescription="@string/master_key"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"/>
 
         <EditText
             android:id="@+id/main_master_key"
@@ -60,24 +70,26 @@
             android:singleLine="true"
             android:maxLines="1"
             android:maxLength="25"
-            android:layout_width="250dp"
+            android:layout_toLeftOf="@+id/main_digest"
+            android:layout_toRightOf="@+id/ic_key"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="@string/master_key"/>
 
         <TextView
             android:id="@+id/main_digest"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
             android:gravity="center"
-            android:paddingLeft="4dip"
-            android:paddingRight="4dip"
-            android:layout_width="48dip"
-            android:layout_height="48dip"
             style="@android:style/TextAppearance.Medium"/>
-    </LinearLayout>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/main_hashed_password"
         android:textSize="@dimen/hashed_password_text_size"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin_large"
         android:gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -86,7 +98,7 @@
     <TextView
         android:id="@+id/main_hashed_password_old"
         android:textSize="@dimen/hashed_password_text_size"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin_large"
         android:gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
