Don't allow saving a profile if its name or the private key are empty

--- a/app/src/main/res/layout/activity_add_profile.xml
+++ b/app/src/main/res/layout/activity_add_profile.xml
@@ -118,6 +118,7 @@
                 android:layout_height="wrap_content"
                 style="?android:buttonBarButtonStyle"
                 android:layout_weight="1"
+                android:enabled="false"
                 android:text="@string/save"/>
         </LinearLayout>
     </LinearLayout>
